Python API Reference link wrong in splash screen #53191

Closed
opened 2017-10-28 11:51:40 +02:00 by Bob Dowling · 8 comments

System Information
MacOSX 10.12.6
MacBook Pro (Retina, 13-inch, Early 2015)
2.7 GHz Intel Core i5
8 GB 1867 MHz DDR3
Intel Iris Graphics 6100 1536 MB

Blender Version
Broken: 2.79 2017-09-11 10:43 5bd8ac9

Short description of error
The link to the Python API Reference at the bottom of the list of Links in the splash screen leads to a missing page

Exact steps for others to reproduce the error
Launch Blender.
Click on bottom link in the list of links ("Python API Reference")
Get a web page with a 404 error:

Not Found
The requested URL /api/blender_python_api_2_79_release was not found on this server.

(Server is docs.blender.org.)

I suspect the bug is the lack of a link or copy in the https:*docs.blender.org/api/ directory on the server. https:*docs.blender.org/api/current/ works just fine. Presumably it should be a link to blender_python_api_2_79_release or vice versa.

**System Information** MacOSX 10.12.6 MacBook Pro (Retina, 13-inch, Early 2015) 2.7 GHz Intel Core i5 8 GB 1867 MHz DDR3 Intel Iris Graphics 6100 1536 MB **Blender Version** Broken: 2.79 2017-09-11 10:43 5bd8ac9 **Short description of error** The link to the Python API Reference at the bottom of the list of Links in the splash screen leads to a missing page **Exact steps for others to reproduce the error** Launch Blender. Click on bottom link in the list of links ("Python API Reference") Get a web page with a 404 error: Not Found The requested URL /api/blender_python_api_2_79_release was not found on this server. (Server is docs.blender.org.) I suspect the bug is the lack of a link or copy in the https:*docs.blender.org/api/ directory on the server. https:*docs.blender.org/api/current/ works just fine. Presumably it should be a link to blender_python_api_2_79_release or vice versa.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @BobDowling

Added subscriber: @BobDowling

Added subscriber: @PuffingtonToast

Added subscriber: @PuffingtonToast

Happened to me too. Help->Python API Reference works just fine. The splash screen 404s.

Happened to me too. Help->Python API Reference works just fine. The splash screen 404s.

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2017-10-30 11:59:27 +01:00

yeah, thanks for the report, will fix this (just forgot to edit that one when we switched to new link/naming scheme…).

yeah, thanks for the report, will fix this (just forgot to edit that one when we switched to new link/naming scheme…).

This issue was referenced by ca006deafe

This issue was referenced by ca006deafe0b84f4d1f05c7259ad7c7efafcbfda

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53191
No description provided.