Fix T53191: Python API Reference link wrong in splash screen.

Forgot to update splashscreen links when we switched API doc naming
scheme...